test/zinc_source/compile_errors/operators/08_incompatible_integer_exact.zn
// expected-error: operator '&' requires compatible integer operands

fn main() {
    a: u8 = 1
    b: u16 = 2
    bad = a & b
}
